--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -36,6 +36,7 @@
         transform: translateX(-50%);
       }
     }
+
     .hot-ads-info {
       width: 70%;
       margin: 0;
@@ -163,46 +164,6 @@
     height: 45rem;
     width: $desktopwidth;
 
-    .title-section {
-      align-items: center;
-      justify-content: start;
-      margin: 0 4rem;
-      border-bottom: 1px solid $nav_color;
-
-      h2 {
-        margin: 0;
-        padding: 1rem 1rem 1rem 0;
-        font-size: 1.7rem;
-
-        i {
-          padding-right: 1rem;
-        }
-      }
-
-      p {
-        margin: 0 0.5rem;
-        color: $secondarycolor;
-        padding: 1rem 0;
-      }
-    }
-
-    .View-title {
-      justify-content: flex-end;
-      align-items: center;
-      margin: 0;
-
-      a {
-        text-decoration: none;
-        color: $primarycolor;
-        font-family: $firstfont;
-      }
-
-      a:visited,
-      a:link {
-        color: $primarycolor;
-      }
-    }
-
     .carrousel {
       align-items: center;
       padding: 2rem 0;
@@ -218,6 +179,7 @@
         width: 100%;
         height: 100%;
         z-index: 1;
+
         .prev,
         .next {
           width: $big_nav_width;
@@ -333,7 +295,7 @@
         .next:hover {
           transition: 0.3s;
           background-color: $nav_hover_color;
-        }     
+        }
       }
 
       #i1:checked ~ #one,
@@ -368,7 +330,50 @@
       }
     }
   }
-  
+
+  .styles-section {
+
+    .title-section {
+      align-items: center;
+      justify-content: start;
+      margin: 0 4rem;
+      border-bottom: 1px solid $nav_color;
+
+      h2 {
+        margin: 0;
+        padding: 1rem 1rem 1rem 0;
+        font-size: 1.7rem;
+
+        i {
+          padding-right: 1rem;
+        }
+      }
+
+      p {
+        margin: 0 0.5rem;
+        color: $secondarycolor;
+        padding: 1rem 0;
+      }
+    }
+
+    .View-title {
+      justify-content: flex-end;
+      align-items: center;
+      margin: 0;
+
+      a {
+        text-decoration: none;
+        color: $primarycolor;
+        font-family: $firstfont;
+      }
+
+      a:visited,
+      a:link {
+        color: $primarycolor;
+      }
+    }
+  }
+
   .first {
     border-top: 1px solid $thirdcolor;
 
